# AIYOU_open-ai-video-drama-generator

./: .gitignore  AIYOU-新手入门指南.docx  APP_REFACTOR_GUIDE.md  App.tsx  COMMERCIALIZATION_PLAN.md  DETAILED_REFACTOR_GUIDE.md  NODE_STANDARDIZATION_IMPLEMENTATION.md  README.md  generate-doc.js  index.html  index.tsx  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  prompts.txt  types.ts  vite.config.ts
components/: ApiKeyPrompt.tsx  AssistantPanel.tsx  CanvasBoard.tsx  CanvasContextMenu.tsx  CharacterDetailModal.tsx  CharacterLibrary.tsx  ChatWindow.tsx  ConnectionLayer.tsx  DebugPanel.tsx  ExpandedView.tsx  ImageCropper.tsx  MultiFrameDock.tsx  Node.tsx  SettingsModal.tsx  SettingsPanel.tsx  SidebarDock.tsx  SketchEditor.tsx  SmartSequenceDock.tsx  SonicStudio.tsx  StorageSettingsPanel.tsx  StoryboardEditor.tsx  StoryboardTimeline.tsx  StoryboardVideoNode.tsx  VideoNodeModules.tsx  WelcomeScreen.tsx
constants/: storyboardTerms.ts
docs/: AI-Prompts-文档.md  剧本分集分镜优化方案.md  新手入门指南.md  黑白模式与自动排列功能规划.md
handlers/: useKeyboardShortcuts.ts  useNodeActions.ts  useWorkflowActions.ts
hooks/: useCanvasState.ts  useHistory.ts  useNodeOperations.ts  useViewportCulling.ts  useWindowSize.ts
scripts/: build-server.js
server/: .env.example  .npmrc  index.js  model-config.json  package-lock.json  package.json  pnpm-lock.yaml
services/: aiAdapter.ts  apiLogger.ts  characterActionHandler.ts  characterGenerationManager.ts  fileSystemService.ts  geminiService.ts  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+51 files in other folders)
